language/move-lang/tests/move_check/typing/mutate_non_ref.exp
error: 

   ┌── tests/move_check/typing/mutate_non_ref.move:6:13 ───
   │
 6 │         let u = 0;
   │             - The type: integer
 7 │         *u = 1;
   │          - Is not compatible with: '&mut _'
   │          ^ Invalid mutation. Expected a mutable reference
   │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:9:17 ───
    │
  9 │         let s = S { f: 0 };
    │                 ---------- The type: '0x8675309::M::S'
 10 │         *s = S { f: 0 };
    │          - Is not compatible with: '&mut _'
    │          ^ Invalid mutation. Expected a mutable reference
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:2:19 ───
    │
  2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 11 │         *s.f = 0;
    │          --- Is not compatible with: '&mut _'
    │          ^^^ Invalid mutation. Expected a mutable reference
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:2:19 ───
    │
  2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 14 │         *s_ref.f = 0;
    │          ------- Is not compatible with: '&mut _'
    │          ^^^^^^^ Invalid mutation. Expected a mutable reference
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:3:19 ───
    │
  3 │     struct X { s: S }
    │                   - The type: '0x8675309::M::S'
    ·
 17 │         *x.s = S { f: 0 };
    │          --- Is not compatible with: '&mut _'
    │          ^^^ Invalid mutation. Expected a mutable reference
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:2:12 ───
    │
  2 │     struct S { f: u64 }
    │            - Is declared as a non-implicitly copyable type here
  3 │     struct X { s: S }
    │                   - The type: '0x8675309::M::S'
    ·
 17 │         *x.s = S { f: 0 };
    │          ^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:2:19 ───
    │
  2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 18 │         *x.s.f = 0;
    │          ----- Is not compatible with: '&mut _'
    │          ^^^^^ Invalid mutation. Expected a mutable reference
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:3:19 ───
    │
  3 │     struct X { s: S }
    │                   - The type: '0x8675309::M::S'
    ·
 21 │         *x_ref.s = S{ f: 0 };
    │          ------- Is not compatible with: '&mut _'
    │          ^^^^^^^ Invalid mutation. Expected a mutable reference
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:2:12 ───
    │
  2 │     struct S { f: u64 }
    │            - Is declared as a non-implicitly copyable type here
  3 │     struct X { s: S }
    │                   - The type: '0x8675309::M::S'
    ·
 21 │         *x_ref.s = S{ f: 0 };
    │          ^^^^^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:2:19 ───
    │
  2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 22 │         *x_ref.s.f = 0;
    │          --------- Is not compatible with: '&mut _'
    │          ^^^^^^^^^ Invalid mutation. Expected a mutable reference
    │

